@@ -1,3 +1,9 @@
+2011-02-15 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
+   * DESCRIPTION (Version, Date): 1.4-03
+   * R/sim: fix a bug in sim.glm() when there is only an intercept 
+        as a predictor. (discovered by Barnes Benjamin)
+
+
 2011-02-14 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
    * DESCRIPTION (Version, Date): 1.4-02
    * R/bayesglm: fix some dimension issues when NCOL(x.nobs)==1
